# gfxplusplus

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  DOCUMENTATION.md  Dockerfile  Doxyfile  INSTALL.md  LICENSE.txt  README.md  clang-format-all  docker-compose.yaml  main.cpp  main.h  makeIncludes.sh
.github/workflows/: main.yml
Frontend/GFXUtilities/: ActionBubble.cpp  ActionBubble.h  CMakeLists.txt  Candle.cpp  Candle.h  Circle.cpp  Circle.h  DrawNeuralNet.cpp  DrawNeuralNet.h  DrawNeuron.cpp  DrawNeuron.h  Ellipse.cpp  Ellipse.h  EventTracker.cpp  EventTracker.h  GraphablePoint.h  Horizontal_Line.cpp  Horizontal_Line.h  NeuralNet.cpp  NeuralNet.h  RULayerInfo.cpp  RULayerInfo.h  SimpleLine.cpp  SimpleLine.h  gnode.cpp  gnode.h  neuron.cpp  neuron.h  point2.cpp  point2.h  quaternion.cpp  quaternion.h  scalar1.cpp  scalar1.h  vec3.cpp  vec3.h
Frontend/GItems/: CMakeLists.txt  GItem.cpp  GItem.h  GLayout.cpp  GLayout.h  GPanel.cpp  GPanel.h  GeneralListener.cpp  GeneralListener.h  RUColors.cpp  RUColors.h  RUComponent.cpp  RUComponent.h  RUItemArea.cpp  RUItemArea.h
Frontend/GItems/Mini/: CMakeLists.txt  RUBackgroundComponent.cpp  RUBackgroundComponent.h  RUBorderComponent.cpp  RUBorderComponent.h  RUKeyDown.cpp  RUKeyDown.h  RUKeyUp.cpp  RUKeyUp.h  RULoseFocus.cpp  RULoseFocus.h  RUMouseDown.cpp  RUMouseDown.h  RUMouseMotion.cpp  RUMouseMotion.h  RUMouseUp.cpp  RUMouseUp.h  RUMouseWheel.cpp  RUMouseWheel.h
Frontend/GLayouts/: CMakeLists.txt  GLinearLayout.cpp  GLinearLayout.h  GRelativeLayout.cpp  GRelativeLayout.h
Frontend/GUI/: CMakeLists.txt  RUCheckbox.cpp  RUCheckbox.h  RUDropdown.cpp  RUDropdown.h  RUImageComponent.cpp  RUImageComponent.h  RUListbox.cpp  RUListbox.h  RUMsgBox.cpp  RUMsgBox.h  RUProgressBar.cpp  RUProgressBar.h  RUScrollbar.cpp  RUScrollbar.h  RUTabContainer.cpp  RUTabContainer.h  RUTable.cpp  RUTable.h
Frontend/GUI/RUGraph/: CMakeLists.txt  Circle.cpp  GraphLine.cpp  GraphLine.h  GraphScatter.cpp  GraphScatter.h  Graphable.cpp  Graphable.h  RUDrawComponent.cpp  RUGraph.cpp  RUGraph.h
Frontend/GUI/Text/: CMakeLists.txt  GFont.cpp  GFont.h  RUButton.cpp  RUButton.h  RULabel.cpp  RULabel.h  RUTextComponent.cpp  RUTextComponent.h  RUTextbox.cpp  RUTextbox.h
Frontend/Graphics/: CMakeLists.txt  gfxpp3D.cpp  gfxpp3D.h  graphics.cpp  graphics.h  graphics2D.cpp  graphics3D.cpp  object.cpp  object.h
Frontend/RUGraph/: ActionBubbleGraphable.cpp  CMakeLists.txt  CandleGraphable.cpp  Circle.cpp  Circle.h  CircleGraphable.cpp  EllipseGraphable.cpp  GNodeGraphable.cpp  GeneralGraphable.h  GraphCandlestick.cpp  GraphCandlestick.h  GraphLine.cpp  GraphLine.cpp~HEAD  GraphLine.h  GraphScatter.cpp  GraphScatter.cpp~HEAD  GraphScatter.h  GraphScatter.h~HEAD  Graphable.cpp  Graphable.h  GraphableAttr.cpp  GraphableAttr.h  HLineGraphable.cpp  LineGraphable.cpp  NeuralNetGraphable.cpp  NormalizeGraphable.h  RUCandleGraph.cpp  RUCandleGraph.h  RUDrawComponent.cpp  RUDrawComponent.cpp~HEAD  RUDrawComponent.h  RUDrawComponent.h~HEAD  RUGraph.cpp  RUGraph.cpp~HEAD  RUGraph.h  RULineGraph.cpp  RULineGraph.h  RUScatterGraph.cpp  RUScatterGraph.h  SimpleLineGraphable.cpp
include/: main.h
include/Backend/: GResult.h
include/Backend/Database/: GAnalysis.h  GDeleter.h  GList.h  GLogger.h  GObject.h  GPointer.h  GString.h  GTable.h  GType.h  GVector.h  PNGPlotter.h  SaveFolder.h  SaveTable.h  Serializable.h  ServiceData.h  StandItem.h  gtable.h  image.h  maxid.h  oldjson.h  png-helper.h  saveitem.h  savelist.h  standardizable.h
include/Backend/Networking/: connection.h  crypt.h  instance.h  main.h  service.h  socket.h
include/services/: bad_request.h  handshake_client.h  handshake_server.h  logout_client.h  logout_server.h
resources/gui/: RUChatbox.java
resources/gui/Components/: robotstatic.pxm
services/: gui_callback.h
